--- a/index.html
+++ b/index.html
@@ -11,25 +11,31 @@
 
 <body>
   <div class="container">
-    <header class="nav">
+    <header>
       <img src="img/AWlogo.png" alt="AW Logo">
-      <a href="#">HOME</a>
-      <a href="#">TEAM</a>
-      <a href="#">MINDBODY</a>
-      <a href="#">CONTACT</a>
+      <a href="index.html">HOME</a>
+      <a href="team.html">TEAM</a>
+      <a href="https://clients.mindbodyonline.com/classic/mainclass?studioid=297696&tg=&vt=&lvl=&stype=&view=&trn=0&page=&catid=&prodid=&date=12%2f22%2f2021&classid=0&prodGroupId=&sSU=&optForwardingLink=&qParam=&justloggedin=&nLgIn=&pMode=0&loc=1"
+        target="blank">MINDBODY</a>
+      <a href="contact.html">CONTACT</a>
     </header>
 
     <main>
-      <div class="title">
-        <h1 class="welcome">Welcome to Active Wellness 499 illinois</h1>
-      </div>
-      <p class="located">To locate the fitness center we are on 16th Street near the Chase Center. For further assitance please talk to the security to help guide you there</p>
+      <h1 class="title">Welcome to Active Wellness 499 illinois</h1>
 
       <div class="map">
+        <p>To locate the fitness center we are on 16th Street near the Chase Center. For further assitance please talk to the security to help guide you there</p>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d647.2133248859791!2d-122.38788847419644!3d37.7665621491295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7fc66e8fa561%3A0xb8ebef4386e387d6!2s499%2016th%20St%2C%20San%20Francisco%2C%20CA%2094158!5e0!3m2!1sen!2sus!4v1640126337891!5m2!1sen!2sus"
-          width="824" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
+      <div class="groupex">
+        <p>If you are interested in Group Fitness Classes please Fill this Form out!</p>
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLScK2B_Ge3PjcoUwWIZvhzxQGkz2TBlJxnerBMcGoeKr_6zjhQ/viewform?embedded=true"
+          width="100%" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      </div>
+
     </main>
 
     <footer></footer>
